[gd_scene load_steps=14 format=3 uid="uid://dlildot4mqcx3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_sfcgu"]
[ext_resource type="PackedScene" uid="uid://cxvof3ef3d7f" path="res://scenes/velocity_component.tscn" id="2_2sd5o"]
[ext_resource type="Texture2D" uid="uid://4rb5cjtom3k7" path="res://assets/Sprites/MainCharacter.png" id="3_lpu6f"]
[ext_resource type="PackedScene" uid="uid://btt6snnj05le0" path="res://scenes/health_component.tscn" id="3_tktnp"]
[ext_resource type="PackedScene" uid="uid://cn8b5if1uoey6" path="res://scenes/orb.tscn" id="4_lpkt1"]
[ext_resource type="PackedScene" uid="uid://c87172ansg6ek" path="res://scenes/hurt_component.tscn" id="5_3wyxr"]
[ext_resource type="PackedScene" uid="uid://tr4ip3dll1g" path="res://scenes/health_bar.tscn" id="6_tipjp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2shqx"]
radius = 3.5625
height = 11.625

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xa3a8"]
radius = 2.70189
height = 11.2154

[sub_resource type="Animation" id="Animation_lj6vd"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_5js6w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_l1dak"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7p0w5"]
_data = {
"Idle": SubResource("Animation_lj6vd"),
"RESET": SubResource("Animation_5js6w"),
"Walk": SubResource("Animation_l1dak")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
light_mask = 4
visibility_layer = 4
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_sfcgu")

[node name="VelocityComponent" parent="." instance=ExtResource("2_2sd5o")]
max_speed = 50
acceleration = 20.0

[node name="HealthBar" parent="." instance=ExtResource("6_tipjp")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -3.4687
offset_top = -12.0879
offset_right = -3.4687
offset_bottom = -12.0879
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.7, 0.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_2shqx")

[node name="HealthComponent" parent="." instance=ExtResource("3_tktnp")]

[node name="HurtComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_3wyxr")]
health_component = NodePath("../HealthComponent")
character_type = Array[int]([3])

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, 0.630672)
shape = SubResource("CapsuleShape2D_xa3a8")

[node name="Animations" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Animations"]
scale = Vector2(0.326, 0.328)
texture = ExtResource("3_lpu6f")
hframes = 8
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7p0w5")
}
autoplay = "Idle"

[node name="Orb" parent="." instance=ExtResource("4_lpkt1")]
position = Vector2(3, -3)
